aggiornato aspetto marketing - valore aggiunto

--- a/PianoDiProgetto/sections/marketing.tex
+++ b/PianoDiProgetto/sections/marketing.tex
@@ -8,7 +8,7 @@ Si possono quindi delineare 3 segmenti di target diversi che riscontrano problem
 Questi sono persone che lavorano in autonomia e devono gestire personalmente la posta in arrivo, sia che essa sia di clienti, sia che riguardi newsletter a cui il professionista è iscritto. Probabilmente un singolo lavoratore possiede più indirizzi email e questo contribuisce a complicare ulteriormente la gestione corretta della posta.\\
 Questo segmento è quindi interessato ad un prodotto di semplice utilizzo, efficiente ed affidabile e capace di gestire diversi account di posta anche in mobilità.
 \item[Studi privati:] questo segmento identifica professionisti che, diversamente dalla categoria precedente, hanno aperto uno studio nel quale lavorano a stretto contatto con un ristretto numero di soci e dipendenti\footnote{\url{http://it.wikipedia.org/wiki/Piccola\_e\_media\_impresa}}; appare evidente come la presenza di più persone con i relativi contatti email personali, stia ad indicare una maggiore necessità di controllo del traffico della posta, in quanto i volumi saranno maggiori rispetto ad un singolo utente.\\
-Di conseguenza il prodotto più adatto per questa categoria deve essere in grado di fornire una gestione centralizzata degli account e dei servizi di condivisione delle informazioni.\\
+Di conseguenza il prodotto più adatto per questa categoria deve essere in grado di fornire una gestione centralizzata degli account e dei servizi di condivisione delle informazioni.
 \item[PMI:] le piccole e medie imprese presentano caratteristiche ancora diverse dalle 2 categorie precedenti, in primo luogo perché hanno una struttura organizzativa aziendale con una netta divisione dei compiti; la visione della posta sarà quindi una mansione affidata a determinate categorie di dipendenti i quali possono non essere direttamente interessati alle newsletter in entrata: appare quindi fondamentale che i diretti interessati possano avere modo di accedere a tali informazioni in modo agevole e completo.\\
 Il prodotto software deve essere quindi in grado di gestire un database di discrete dimensioni accedibile da più persone anche contemporaneamente, deve quindi avere doti di robustezza e affidabilità notevoli, nonchè reattivo alle richieste che vengono effettuate.
 \end{description}
@@ -71,10 +71,18 @@ Tutte le edizioni includono le stesse funzionalità per l'analisi e l'estrazione
 Inoltre tutte le edizioni non hanno restrizioni sul tipo di messaggi che possono analizzare (Server POP3, IMAP, feed di Twitter) ma per esempio solo le versioni Enterprise e Developer permettono di spostare il messaggio corrente in una cartella diversa da quella in cui è arrivato.
 
 Anche per questo software sorge lo stesso problema del precedente in quando è utilizzabile solo su piattaforme Windows 7/8, Vista, XP, 2003 Server, 2008 Server, 2012 Server.\\
-Il software è a pagamento con un costo a partire da 475\euro per l'edizione Small Business, 995\euro per quella Enterprise, 475\euro per quella Developer e 3195\euro per la Data Center Edition, ma permette una prova gratuita di 30 giorni dopo essersi registrati.
+Il software è a pagamento con un costo a partire da 475\euro{} per l'edizione Small Business, 995\euro{} per quella Enterprise, 475\euro{} per quella Developer e 3195\euro{} per la Data Center Edition, ma permette una prova gratuita di 30 giorni dopo essersi registrati.
+
+\paragraph{Altri competitors}
+La ricerca effettuata ha portato alla luce numerose altre aziende che vantano nel catalogo prodotti soluzioni con caratteristiche simili a quelle cercate, ma la maggior parte di essi fornisce solamente sistemi che gestiscono email attraverso l'indirizzo del mittente e consentono di creare cartelle per la memorizzazione permanente dei messaggi.\\
+Peraltro questa funzione viene svolta egregiamente dalla maggior parte dei servizi mail più conosciuti e importanti e risulta quindi essere superflua.\\
+Per quanto riguarda le newsletter invece, forniscono la possibilità di crearle, attingendo ad un database esistente, e di gestirne l'invio ai clienti.\\
+Appare evidente come il mercato non disponga di soluzioni efficaci per i suddetti clienti che si ritrovano sommersi di informazioni, e che non riescono a catalogarle e quindi a sfruttarle per incrementare il proprio business.
 
 \subsubsection{Valore aggiunto}
-Dall'analisi dei competitors è emerso come non esista sul mercato un software \emph{multipiattaforma} che soddisfi i bisogni riscontrati nel capitolato; questa è una notevole mancanza in quanto non esiste solo il mondo Microsoft, anzi il mercato dei sistemi operativi sta andando incontro a notevoli cambiamenti, soprattutto con l'avvento dei terminali mobile e di Android; risulta evidente come non basta più coprire la fetta maggiore di pubblico, ma è necessario rendere il prodotto fruibile alla maggior parte delle persone e dei dispositivi.
+Dall'analisi dei competitors è emerso come non esista sul mercato un software \emph{multipiattaforma} che soddisfi i bisogni riscontrati nel capitolato; questa è una notevole mancanza in quanto non esiste solo il mondo Microsoft, anzi il mercato dei sistemi operativi sta andando incontro a notevoli cambiamenti, soprattutto con l'avvento dei terminali mobile e di Android; risulta evidente come non basta più coprire la fetta maggiore di pubblico, ma è necessario rendere il prodotto fruibile alla maggior parte delle persone e dei dispositivi.\\
+In secondo luogo con \NOMEPROGETTO{} il gruppo si è prefisso di sfruttare un modello di business diverso da quelli riscontrati per i prodotti concorrenti: l'idea è quella di sviluppare una base software con funzionalità minime, ma perfettamente funzionante, da distribuire ad un prezzo ragionevole, e fornire in seguito le personalizzazioni richieste dai diversi clienti.\\
+In questo modo il prodotto software risulterà essere più semplice da realizzare e più flessibile una volta approdato nel mercato, così facendo si potrà coprire e soddisfare un target di utenza più ampio senza creare una serie di prodotti dedicati ad ogni segmento.\\
 
 \subsubsection{Distribuzione prodotto}
 
