revisione aspetto legale

--- a/PianoDiProgetto/sections/fattibilita.tex
+++ b/PianoDiProgetto/sections/fattibilita.tex
@@ -1,10 +1,14 @@
 \subsection{Aspetto marketing}
 \input{sections/marketing}
+\newpage
 
 \subsection{Aspetto tecnologico}
 \input{sections/tecnologico}
+\newpage
 
 \subsection{Aspetto legale}
 \input{sections/legale}
+\newpage
 
 \subsection{Aspetto economico-finanziario}
+\input{sections/economico}
