revisione pianificazione fino ad aspetto legale

--- a/PianoDiProgetto/sections/marketing.tex
+++ b/PianoDiProgetto/sections/marketing.tex
@@ -85,5 +85,5 @@ In secondo luogo con \NOMEPROGETTO{} il gruppo si è prefisso di sfruttare un mo
 In questo modo il prodotto software risulterà essere più semplice da realizzare e più flessibile una volta approdato nel mercato, così facendo si potrà coprire e soddisfare un target di utenza più ampio senza creare una serie di prodotti dedicati ad ogni segmento.\\
 
 \subsubsection{Distribuzione prodotto}
-
+%TODO distribuzione elettronica
 \subsubsection{Promozione prodotto}
