correzione elenchi pianificazione

--- a/PianoDiProgetto/sections/wbs.tex
+++ b/PianoDiProgetto/sections/wbs.tex
@@ -84,6 +84,7 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \end{description}
 
 \paragraph{Analisi delle nuove tecnologie}
+\begin{description}
 \item[Descrizione:] ricerca mirata di eventuali innovazioni tecnologie presenti nel mercato che possano risultare utili allo sviluppo del software.
 \item[Responsabile:]
 \item[Input:] documento di specifiche di funzionalità prodotto dal WP.
@@ -99,6 +100,8 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \end{itemize}
 \item[Costo:] \euro{}.
 \item[Tempi di realizzazione:]  giorni lavorativi.
+\end{description}
+
 
 \paragraph{Fattibilità tecnica}
 \begin{description}
@@ -142,7 +145,7 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \end{description}
 %TODO
 \paragraph{Fattibilità Legale}
-
+\begin{description}
 \item[Descrizione:] fase di analisi del prodotto software sotto l'aspetto legale. Si studiano e
 si definiscono le strategie eventuali da adottare in difesa del progetto. Si verifica inoltre
 la possibilità di brevettare il prodotto e di registrare un marchio. Infine si verifica che
@@ -167,10 +170,12 @@ rilascio del prodotto\\
 \end{itemize}
 \item[Costo:] \euro \\
 \item[Tempi di realizzazione:]  giorni lavorativi
+\end{description}
+
 
 
 \paragraph{Fattibilità Economica}
-
+\begin{description}
 \item[Descrizione:] fase di analisi del prodotto software sotto l'aspetto economico. Si studia
 e si valutano i benefici economici che tale progetto potrebbe portare. Vengono stimati
 inoltre i costi che l'organizzazione dovrebbe sostenere, diretti ed indiretti. Inoltre viene
@@ -196,10 +201,12 @@ possibili guadagni ed indicando l'eventuale punto di pareggio.\\
 \end{itemize}
 \item[Costo:] \euro \\
 \item[Tempi di realizzazione:]  giorni lavorativi
+\end{description}
+
 
 
 \paragraph{Analisi dei rischi}
-
+\begin{description}
 \item[Descrizione:] fase di analisi dei rischi riguardanti lo sviluppo del prodotto software. Si
 studia e si definiscono quali sono i rischi in cui si può incombere durante tutte la fasi di
 sviluppo, così da poterli evitare o quantomeno gestire\\
@@ -224,8 +231,11 @@ durante le varie fasi di sviluppo del progetto\\
 \end{itemize}
 \item[Costo:] \euro \\
 \item[Tempi di realizzazione:]  giorni lavorativi
+\end{description}
+
 
 \paragraph{Definizione dei casi d'uso}
+\begin{description}
 \item[Descrizione:]fase di definizione finale delle funzionalità del prodotto. Si determina
 in modo non ambiguo quali saranno le caratteristiche del software e come gli utenti
 potranno interagire con esso. Successivamente si effettua un’analisi dei rischi sul piano dello sviluppo
@@ -253,11 +263,13 @@ definitive del prodotto finale e come sarà possibile per gli utenti interagire 
 
 \item[Costo:] \euro \\
 \item[Tempi di realizzazione:]  giorni lavorativi
+\end{description}
+
 
 
 
 \paragraph{Definizione dei requisiti}
-
+\begin{description}
 \item[Descrizione:] fase non elementare, composta da altri WP di livello inferiore, allo scopo di definire i requisiti che il prodotto deve possedere e soddisfare\\
 
 \item[Responsabile:] \\
@@ -278,10 +290,12 @@ analisti\\
 \end{itemize}
 \item[Costo:] \euro \\
 \item[Tempi di realizzazione:]  giorni lavorativi
+\end{description}
+
 
 
 \paragraph{Pianificazione qualità del prodotto}
-
+\begin{description}
 \item[Descrizione:] fase di identificazione e definizione degli standard da seguire allo scopo di garan-
 tire qualità al prodotto. Identificazione delle strategie di controllo da utilizzare per
 aggiungere qualità al prodotto\\
@@ -306,9 +320,12 @@ standard e le strategie da seguire per aggiungere qualità al prodotto\\
 \end{itemize}
 \item[Costo:] \euro \\
 \item[Tempi di realizzazione:]  giorni lavorativi
+\end{description}
+
 
 
 \paragraph{Realizzazione e definizione del database}
+\begin{description}
 \item[Descrizione:] fase di sviluppo e codifica del database secondo quanto definito nella fase
 di progettazione\\
 
@@ -328,10 +345,13 @@ Piano di Qualifica ed altra documentazione tecnica\\
 \end{itemize}
 \item[Costo:] \euro \\
 \item[Tempi di realizzazione:]  giorni lavorativi
+\end{description}
+
 
 
 
 \paragraph{Realizzazione interfaccia applicazione}
+\begin{description}
 \item[Descrizione:] fase di sviluppo e codifica dell'interfaccia previste per il software, se-
 condo quanto definito nelle fasi di analisi e progettazione \\
 
@@ -352,9 +372,12 @@ to, Piano di Qualifica ed altra documentazione tecnica \\
 \end{itemize}
 \item[Costo:] \euro \\
 \item[Tempi di realizzazione:]  giorni lavorativi
+\end{description}
+
 
 
 \paragraph{Manuali Utente}
+\begin{description}
 \item[Descrizione:] realizzazione dei manuali utente per il supporto all’utente all'uso dell'interfaccia web. Il manuale illustra le funzionalità del prodotto, il suo utilizzo e l’esposizione con possibili soluzioni di problemi \\
 
 \item[Responsabile:] \\
@@ -373,9 +396,12 @@ to, Piano di Qualifica ed altra documentazione tecnica \\
 \end{itemize}
 \item[Costo:] \euro \\
 \item[Tempi di realizzazione:]  giorni lavorativi
+\end{description}
+
 
 
 \paragraph{Realizzazione documentazione database}
+\begin{description}
 \item[Descrizione:] stesura formale della documentazione riguardante tutto il codice prodotto
 per la realizzazione del database \\
 
@@ -395,9 +421,12 @@ per la realizzazione del database \\
 \end{itemize}
 \item[Costo:] \euro \\
 \item[Tempi di realizzazione:]  giorni lavorativi
+\end{description}
+
 
 
 \paragraph{Documentazione interfaccia web}
+\begin{description}
 \item[Descrizione:] stesura formale della documentazione riguardante tutto il codice prodotto
 per la realizzazione del interfaccia \\
 
@@ -417,10 +446,12 @@ per la realizzazione del interfaccia \\
 \end{itemize}
 \item[Costo:] \euro \\
 \item[Tempi di realizzazione:]  giorni lavorativi
+\end{description}
+
 
 
 \paragraph{Test unità}
-
+\begin{description}
 \item[Descrizione:] fase di test di tutte le singole unità software prodotte \\
 
 \item[Responsabile:] \\
@@ -442,9 +473,12 @@ per la realizzazione del interfaccia \\
 \end{itemize}
 \item[Costo:] \euro \\
 \item[Tempi di realizzazione:]  giorni lavorativi
+\end{description}
+
 
 
 \paragraph{Test intero sistema}
+\begin{description}
 \item[Descrizione:] fase di test sulle interazioni fra le singole unità. Si verifica che i comportamenti in seguito alle comunicazioni fra di queste siano quelli previsti \\
 
 \item[Responsabile:] \\
@@ -466,13 +500,15 @@ per la realizzazione del interfaccia \\
 \end{itemize}
 \item[Costo:] \euro \\
 \item[Tempi di realizzazione:]  giorni lavorativi
+\end{description}
+
 
 
 
 
 
 \paragraph{Collaudo}
-
+\begin{description}
 \item[Descrizione:] fase di test dell’intero sistema da effettuare prima del rilascio. Si cercano
 eventuali errori o malfunzionamenti e successivamente si certifica che tutte le funzionalità dichiarate siano presenti \\
 
@@ -496,9 +532,12 @@ eventuali errori o malfunzionamenti e successivamente si certifica che tutte le 
 \end{itemize}
 \item[Costo:] \euro \\
 \item[Tempi di realizzazione:]  giorni lavorativi
+\end{description}
 
 
- \paragraph{Promozione del Prodotto}
+
+\paragraph{Promozione del Prodotto}
+\begin{description}
 \item[Descrizione:] fase di promozione del prodotto realizzato. Si punta a pubblicizzare il
 prodotto con lo scopo di raggiungere quanti più clienti possibili iniziando a creare un brand \\
 
@@ -515,3 +554,4 @@ prodotto con lo scopo di raggiungere quanti più clienti possibili iniziando a c
 \end{itemize}
 \item[Costo:] \euro \\
 \item[Tempi di realizzazione:]  giorni lavorativi
+\end{description}
