corretti errori di compilazione

--- a/PianoDiProgetto/sections/legale.tex
+++ b/PianoDiProgetto/sections/legale.tex
@@ -3,24 +3,14 @@ La legge disciplina specificatamente la tutela del software, in primo luogo con 
 La tutela si estende anche all'interfaccia del programma stesso. Ma, se quest'ultima contiene particolari immagini da proteggere, ciò andrà fatto indipendentemente, in base ad altre norme. Tuttavia la tutela del diritto d'autore non è l'unica forma di protezione da considerare per vedere tutelate le soluzioni tecniche trovate per realizzare un software. Analizziamo dunque altre forme quali: il brevetto, il marchio, la protezione del design, e più approfonditamente il diritto d'autore.
 
 \subsubsection{Il brevetto (software)}
-<<<<<<< HEAD
 Per definizione un brevetto \textit{``è lo strumento giuridico che permette di commercializzare in esclusiva la propria invenzione in un certo territorio''}. E nello specifico, con brevetto software ci si riferisce, secondo la definizione adottata dall'Unione Europea, ad un brevetto applicato ad \textit{``una invenzione realizzata per mezzo di un elaboratore''}. La legislazione in materia è regolata dalla Convenzione europea dei Brevetti, degli anni '70. L'interpretazione lascia presupporre che, nel caso di invenzioni implementate con l'utilizzo di un calcolatore, per ottemperare ai requisiti di brevettabilità vi deve per forza essere una soluzione tecnica adeguata a risolvere un problema tecnico in modo nuovo ed inventivo rispetto allo Stato dell'Arte, che va oltre la normale interazione tra software e hardware.\\
-Il prodotto software che il team di progetto intende sviluppare non sarà brevettabile secondo la vigente normativa europea, poiché non realizzerà una nuova soluzione tecnica per risolvere in maniera inventiva almeno un problema tecnico, dato che offrirà fondamentalmente la consultazione di una knowledge base, specificatamente creata e gestibile, a fini commerciali.\\
-Anche l'aspetto delle eventuali violazioni del diritto di privativa (diritto al monopolio) detenuto da terzi è da escludersi a priori, visto che da un'analisi normativa si è accertata l'impossibilità di brevettare la nostra tipologia di software, e quindi che nessun'altra realtà applicativa simile alla nostra abbia potuto acquisire nel passato un brevetto quale garanzia di privativa.
-=======
-Per definizione un brevetto \textit{``è lo strumento giuridico che permette di commercializzare in esclusiva della propria invenzione in un certo territorio''}. E nello specifico, con brevetto software ci si riferisce, secondo la definizione adottata dall'Unione Europea, ad un brevetto applicato ad \textit{``una invenzione realizzata per mezzo di un elaboratore''}. La legislazione in materia è regolata dalla Convenzione europea dei Brevetti, degli anni '70. L'interpretazione lascia presuppore che, nel caso di invenzioni implementate con l'utilizzo di un calcolatore, per ottemperare ai requisiti di brevettabilità vi deve per forza essere una soluzione tecnica adeguata a risolvere un problema tecnico in modo nuovo ed inventivo rispetto allo Stato dell'Arte, che va oltre la normale interazione tra software e hardware.\\
-Il prodotto software che il team di progetto intende sviluppare non sarà brevettabile secondo la vigente normativa europea, poiché non realizzerà una nuova soluzione tecnica per risolvere in maniera inventiva almeno un problema tecnico, dato che questa è già stata brevettata. Il team dovrà quindi provvedere a ottenere una licenza per vendere il prodotto in un mercato internazionale. \\
->>>>>>> b43c12d1f545e02658eb5209325481d34dda08e1
+Il prodotto software che il team di progetto intende sviluppare non sarà brevettabile secondo la vigente normativa europea, poiché non realizzerà una nuova soluzione tecnica per risolvere in maniera inventiva almeno un problema tecnico, dato che questa è già stata brevettata. Il team dovrà quindi provvedere a ottenere una licenza per vendere il prodotto in un mercato internazionale.
 
 \subsubsection{Il brevetto (hardware)}
 La situazione per la parte hardware del progetto è simile alla parte software.\\
 Nessuna normativa nazionale o europea ci dà facoltà di brevettare la struttura da noi realizzata per il nostro progetto, in quanto non dispone a tutti gli effetti di una tecnologia particolare per la realizzazione, ma è costituita da risorse intellettuali e/o fisiche già coperte da brevetto.\\
-<<<<<<< HEAD
-Possiamo quindi giungere alla conclusione che dal punto di vista brevettuale non siamo in grado di tutelarci in modo adeguato da un eventuale concorrente nel settore.
-=======
 Dal punto di vista brevettuale quindi non possiamo che fare un apposito contratto con l'azienda direttamente interessata NRI \& NCC (istituto di ricerca giapponese). La ricerca è stata effettuata presso la banca dati dell'EPO digitando la keyword \textit{``newsletter''}, 
 \url{http://worldwide.espacenet.com/publicationDetails/biblio?DB=EPODOC\&II=9\&ND=3\&adjacent=true\&locale=en\_EP\&FT=D\&date=20040527\&CC=JP\&NR=2004152051A\&KC=A}.
->>>>>>> b43c12d1f545e02658eb5209325481d34dda08e1
 
 \subsubsection{Il marchio}
 La nostra esperienza ha mostrato che la registrazione di un marchio, cioè una parola o un simbolo da utilizzare in esclusiva per identificare un prodotto (software nel nostro caso), vietando ad altri di poter utilizzare quello stesso simbolo, è molto conveniente, per i bassi costi, e per gli straordinari vantaggi pratici ed economici che se ne ricavano. Il nuovo marchio dura dieci anni dalla data di deposito, ma rinnovabili alla scadenza. Per ogni marchio che il team vorrà registrare verrà adottatate la seguente scelte:
@@ -36,13 +26,7 @@ I marchi che il team dovrà provvedere a registrare sono: \textit{Malla5} e \tex
 Si può proteggere l'aspetto esteriore di un prodotto, l'interfaccia grafica del software in questo caso, registrandone il design. Per essere registrabile è sufficiente che abbia un carattere individuale, ossia che per le sue caratteristiche si differenzi da tutti gli altri; ma questo potrebbe risultare (sarà una scelta di progettazione) vero soltanto in parte, dato anche che l'applicazione avrà un layout generico e non particolareggiante. Pertanto, anche supponendo di realizzare il design con elementi grafici particolari, riteniamo che la spesa per tale registrazione (circa 850 Euro), sia troppo onerosa e sostanzialmente superflua da sostenere.
 
 \subsubsection{Il diritto d'autore}
-<<<<<<< HEAD
 La legislazione sul diritto d'autore (disciplinato prevalentemente dalla Legge 22 aprile 1941, n. 633, e dalla Convenzione di Berna), figura propria degli ordinamenti di \textit{civil law}, tra i quali troviamo l'Italia, mentre in quelli di \textit{common law} esiste l'istituto del copyright, permette di tutelare dal plagio molte tipologie di opere creative, tra le quali il software per computer. La legge protegge la forma di realizzazione del servizio o dell'opera, e non l'idea che vi era alla base. Nel nostro caso consideriamo che saremo titolari dei diritti (patrimoniali e morali) sull'opera. Per quanto concerne l'acquisto del diritto d'autore, esso si acquista ``automaticamente'' per il solo fatto della creazione dell'opera, senza oneri di carattere amministrativo.\\
-Ciononostante, per dare all'impresa una prova certa della paternità dell'opera, si rende necessario il deposito dell'opera agli uffici predisposti. Va aggiunto che il deposito alla SIAE (Società Italiana degli Autori ed Editori) è talvolta necessario per l'esercizio dei diritti connessi. In Italia, il deposito dell'opera si divide in: deposito di opera inedita, da effettuare alla SIAE prima della pubblicazione dell'opera, e deposito di opera pubblicata, da effettuare ancora presso la SIAE (Sezione OLAF, che cura la tenuta di un apposito Registro pubblico). Si nominano in coda i diritti che l'autore acquista sulla propria opera: il diritto esclusivo di riproduzione, di esecuzione, di diffusione, di distribuzione, di noleggio, di prestito, di elaborazione e trasformazione; diritti cedibili dietro compenso.
-=======
-La legislazione sul diritto d'autore (disciplinato prevalentemente dalla Legge 22 aprile 1941, n. 633, e dalla Convenzione di Berna), figura propria degli ordinamenti di civil law, tra i quali l'Italia, invece in quelli di common law c'è l'istituto del copyright, permette di tutelare dal plagio molte tipologie di opere creative, tra le quali il software per computer. La legge protegge la forma di realizzazione del servizio o dell'opera, e non l'idea che vi era alla base. Nel nostro caso consideriamo che saremo titolari dei diritti (patrimoniali e morali) sull'opera. Per quanto concerne l'acquisto del diritto d'autore, esso si acquista ``automaticamente'' per il solo fatto della creazione dell'opera, senza oneri di carattere amministrativo.\\
-Ciononostante, per dare all'impresa una prova certa della paternità dell'opera, si rende necessario il deposito dell'opera agli uffici predisposti. Va aggiunto che il deposito alla SIAE (Società Italiana degli Autori ed Editori) è talvolta necessario per l'esercizio dei diritti connessi. In Italia, il deposito dell'opera si divide in: deposito di opera inedita, da effettuare alla SIAE prima della pubblicazione dell'opera, e deposito di opera pubblicata, da effettuare ancora presso la SIAE (Sezione OLAF, che cura la tenuta di un apposito Registro pubblico). Si nominano in coda i diritti che l'autore acquista sulla propria opera: il diritto esclusivo di riproduzione, di esecuzione, di diffusione, di distribuzione, di noleggio, di prestito, di elaborazione e trasformazione; diritti cedibili dietro compenso. Le tariffe per il deposito del nostro prodotto, inteso come opera inedita, presso la SIAE è stimata in una quota annuale di 261,81\officialeuro.
->>>>>>> b43c12d1f545e02658eb5209325481d34dda08e1
+Ciononostante, per dare all'impresa una prova certa della paternità dell'opera, si rende necessario il deposito dell'opera agli uffici predisposti. Va aggiunto che il deposito alla SIAE (Società Italiana degli Autori ed Editori) è talvolta necessario per l'esercizio dei diritti connessi. In Italia, il deposito dell'opera si divide in: deposito di opera inedita, da effettuare alla SIAE prima della pubblicazione dell'opera, e deposito di opera pubblicata, da effettuare ancora presso la SIAE (Sezione OLAF, che cura la tenuta di un apposito Registro pubblico). Si nominano in coda i diritti che l'autore acquista sulla propria opera: il diritto esclusivo di riproduzione, di esecuzione, di diffusione, di distribuzione, di noleggio, di prestito, di elaborazione e trasformazione; diritti cedibili dietro compenso.\\
+Le tariffe per il deposito del nostro prodotto, inteso come opera inedita, presso la SIAE è stimata in una quota annuale di 261,81\officialeuro.
 
-\subsubsection{Trattamento dei dati}
-%TODO
